--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@base-org/account": "^2.5.0",
