--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@coinbase/wallet-sdk": "^4.3.7",
     "@mantleio/sdk": "^1.0.5",
     "@metamask/sdk": "^0.34.0",
+    "@openzeppelin/contracts": "^5.4.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@tanstack/react-query": "^5.90.12",
     "@walletconnect/ethereum-provider": "^2.23.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
-    "ethers": "^6.16.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "next": "16.0.10",
@@ -34,16 +34,21 @@
     "wagmi": "^3.1.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "ethers": "^6.13.1",
+    "hardhat": "2.22.3",
     "ignore-loader": "^0.1.2",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "type": "module"
 }
