--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "qs": "^6.14.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
