--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@coinbase/wallet-sdk": "^4.3.7",
     "@mantleio/sdk": "^1.0.5",
     "@metamask/sdk": "^0.34.0",
+    "@openzeppelin/contracts-upgradeable": "^5.4.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@tanstack/react-query": "^5.90.12",
