--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@mysten/sui": "^1.20.0",
+		"@rainbow-me/rainbowkit": "^2.2.10",
 		"@react-three/drei": "^10.7.7",
 		"@react-three/fiber": "^9.5.0",
-		"@suiet/wallet-kit": "^0.5.1",
 		"@tanstack/react-query": "^5.90.12",
 		"axios": "^1.13.2",
 		"clsx": "^2.1.1",
@@ -25,9 +24,14 @@
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"tailwind-merge": "^3.4.0",
-		"three": "^0.182.0"
+		"three": "^0.182.0",
+		"viem": "^2.46.2",
+		"wagmi": "^3.5.0"
 	},
 	"devDependencies": {
+		"@nomicfoundation/hardhat-toolbox": "^6.1.0",
+		"@nomicfoundation/hardhat-verify": "^3.0.10",
+		"@openzeppelin/contracts": "^5.4.0",
 		"@shadcn/ui": "^0.0.4",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
@@ -37,6 +41,7 @@
 		"dotenv": "^17.2.3",
 		"eslint": "^9",
 		"eslint-config-next": "16.0.7",
+		"hardhat": "^3.1.9",
 		"ignore-loader": "^0.1.2",
 		"tailwindcss": "^4",
 		"ts-node": "^10.9.1",
